# Gaia

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BP_LARGE_SCALE_TEST_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  loopy_bp_test_results.txt  mkdocs.yml  pipeline.toml  pyproject.toml  report.md  test_jaynes_strict_refactor.py  test_strict_output.txt  trace.md
.claude-plugin/: marketplace.json  (+1 more)
examples/base-rate-fallacy-toy-gaia/: pyproject.toml
examples/base-rate-fallacy-toy-gaia/src/base_rate_fallacy_toy/: __init__.py  priors.py
examples/derive-direction-toy-gaia/: pyproject.toml
examples/derive-direction-toy-gaia/src/derive_direction_toy/: __init__.py  priors.py
examples/double-counting-toy-gaia/: pyproject.toml
examples/double-counting-toy-gaia/src/double_counting_toy/: __init__.py  priors.py
examples/non-atomic-claim-toy-gaia/: .gitignore  pyproject.toml
examples/non-atomic-claim-toy-gaia/src/non_atomic_claim_toy/: __init__.py  priors.py
tests/fixtures/storage/pvsk/pvsk-burschka2013-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-burschka2013-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-burschka2013-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
tests/fixtures/storage/pvsk/pvsk-burschka2013-gaia/src/pvsk_burschka2013/: __init__.py
tests/fixtures/storage/pvsk/pvsk-grancini2017-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-grancini2017-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-grancini2017-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
tests/fixtures/storage/pvsk/pvsk-grancini2017-gaia/src/pvsk_grancini2017/: __init__.py
tests/fixtures/storage/pvsk/pvsk-gu2023-gaia/: .gitignore  pyproject.toml
tests/fixtures/storage/pvsk/pvsk-gu2023-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-gu2023-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
tests/fixtures/storage/pvsk/pvsk-gu2023-gaia/src/pvsk_gu2023/: __init__.py
tests/fixtures/storage/pvsk/pvsk-he2025-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-he2025-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-he2025-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
tests/fixtures/storage/pvsk/pvsk-he2025-gaia/src/pvsk_he2025/: __init__.py
tests/fixtures/storage/pvsk/pvsk-hou2024-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-hou2024-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-hou2024-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
tests/fixtures/storage/pvsk/pvsk-hou2024-gaia/src/pvsk_hou2024/: __init__.py
tests/fixtures/storage/pvsk/pvsk-jelly2024-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-jelly2024-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-jelly2024-gaia/.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
tests/fixtures/storage/pvsk/pvsk-jelly2024-gaia/src/pvsk_jelly2024/: __init__.py
tests/fixtures/storage/pvsk/pvsk-jeon2014-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-jeon2014-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-jeon2015-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-jeon2015-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-jeong2021-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-jeong2021-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-kim2012-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-kim2012-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-kojima2009-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-kojima2009-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-kojima2009-gaia/gaia-wiki/: _index.md  overview.md
tests/fixtures/storage/pvsk/pvsk-lee2012-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-lee2012-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-li2024-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-li2024-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-lin2022-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-lin2022-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-lin2023-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-lin2023-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-liu2013-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-liu2013-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-liu2023a-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-liu2023a-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-liu2025-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-liu2025-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-meta-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-meta-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-min2020-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-min2020-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-park2021-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-park2021-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-saliba2016-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-saliba2016-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
tests/fixtures/storage/pvsk/pvsk-zhao2022-gaia/: pyproject.toml
tests/fixtures/storage/pvsk/pvsk-zhao2022-gaia/.gaia/: compile_metadata.json  ir.json  ir_hash
(+2132 files in other folders)
