[project]
name = "gaia-lang"
version = "0.5.0"
description = "Gaia Lang — Python DSL for knowledge authoring, compilation, and inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "SiliconEinstein"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "typer[all]>=0.12",
    "numpy>=1.26,<2.4",  # numpy 2.4 breaks pytest-cov (double-import C extension)
    "opt-einsum>=3.3",
    "sympy>=1.13,<2",
    "pint>=0.23",
    "httpx>=0.27",
    "faiss-cpu>=1.7",
]

[project.urls]
Homepage = "https://github.com/SiliconEinstein/Gaia"
Repository = "https://github.com/SiliconEinstein/Gaia"
Issues = "https://github.com/SiliconEinstein/Gaia/issues"

[project.optional-dependencies]
stats = [
    "scipy>=1.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gaia", "gaia.ir*", "gaia.lang*", "gaia.logic*", "gaia.bp*", "gaia.cli*"]

[tool.setuptools.package-data]
"gaia.cli.templates.pages" = ["**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "legacy_dsl: tests that intentionally exercise deprecated v5 DSL compatibility",
    "slow: slow tests (e.g. npm build)",
]

[project.scripts]
gaia = "gaia.cli.main:app"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
