[project]
name = "double-counting-toy-gaia"
version = "0.1.0"
description = "Didactic toy: same evidence entering BP through two paths (formalization-best-practices §8.2)"
requires-python = ">=3.12"
dependencies = []

[tool.gaia]
type = "knowledge-package"
namespace = "example"

[tool.gaia.quality]
allow_holes = true
