[project]
name = "pvsk-burschka2013-gaia"
version = "1.0.0"
description = "Burschka et al. Nature 2013 — Sequential deposition ~15%"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_burschka2013"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "abc3ae14-f15b-4d20-8e7e-b384165c32c9"
