[project]
name = "pvsk-grancini2017-gaia"
version = "1.0.0"
description = "Grancini et al. Nat Commun 2017 — 2D/3D one-year stability"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_grancini2017"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "f549c045-94ce-445c-9c8b-f9021bd0eb33"
