[project]
name = "pvsk-gu2023-gaia"
version = "1.0.0"
description = "Gu et al. Nat Energy 2023 — Bifacial minimodule optimization"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_gu2023"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "f623a10b-4104-4469-baa3-93d9e948a4b6"
