[project]
name = "pvsk-hou2024-gaia"
version = "1.0.0"
description = "Hou et al. Nature 2024 — Perovskite/Si tandem 33.89%"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_hou2024"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "b405c7c3-46ac-465b-a772-9d6a261f8d48"
