[project]
name = "pvsk-jeong2021-gaia"
version = "1.0.0"
description = "Jeong et al. Nature 2021 — Pseudo-halide anion engineering"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_jeong2021"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "aea1d3d6-a22b-4626-8dfc-abca0b2ffda8"
