[project]
name = "pvsk-lin2022-gaia"
version = "1.0.0"
description = "Lin et al. Science 2022 — Damp heat stable 2D/3D PSCs"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_lin2022"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "c4a4b038-6869-4df4-a6a7-e7261462dcae"
