[project]
name = "pvsk-liu2023a-gaia"
version = "1.0.0"
description = "Liu et al. Science 2023 — Bimolecular passivation p-i-n"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_liu2023a"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "c17fbdd6-5b11-440f-8fa1-016bfa4b9bed"
