[project]
name = "pvsk-meta-gaia"
version = "1.0.0"
description = "Meta propositions for perovskite solar cell development analysis"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_meta"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
