[project]
name = "pvsk-min2020-gaia"
version = "1.0.0"
description = "Min et al. Science 2020 — alpha-FAPbI3 inherent bandgap"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_min2020"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "72030548-1dd6-4208-9954-fe55fcaa4d15"
