[project]
name = "pvsk-park2021-gaia"
version = "1.0.0"
description = "Park et al. Nature 2021 — Improved carrier management ~25%"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_park2021"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "b5dd44a5-6a18-4855-9f1e-d6b11203f9c7"
