[project]
name = "pvsk-saliba2016-gaia"
version = "1.0.0"
description = "Saliba et al. EES 2016 — Triple cation perovskites"
requires-python = ">=3.12"
dependencies = [
    "gaia-lang",
    "pvsk-meta-gaia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvsk_saliba2016"]

[tool.gaia]
namespace = "pvsk"
type = "knowledge-package"
uuid = "ac522b9a-7927-477f-98a1-ec3e49525b5f"
